<resources>
    <string name="app_name">HotMatch</string>
    <string name="application_logo">Application Logo</string>
    <string name="not_registered">Not Registered?</string>
    <string name="login">Login</string>
    <string name="user_e_mail">User e-mail</string>
    <string name="user_password">User password</string>
    <string name="enter_an_e_mail_address">Enter an e-mail address</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="re_enter_the_password">Re-enter the password</string>
    <string name="register">Register</string>
    <string name="empty_fields">E-mail and password fields can\'t be empty.</string>
    <string name="is_not_valid_email">You must enter a valid e-mail address!</string>
    <string name="logging_in">Logging in</string>
    <string name="register_empty_fields">Fields can\'t be empty!</string>
    <string name="passwords_must_match">Passwords must match!</string>
    <string name="user_created">User has been created.</string>
    <string name="registered_user_message">You have already a registered user, please use your e-mail address and password to log in.</string>
    <string name="proceed">Proceed</string>
    <string name="avatars">Avatars</string>
    <string name="pp_dialog_description">You have to upload a profile image or pick an avatar.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pick_an_avatar_please">Pick an avatar please…</string>
    <string name="user_avatar_image">User avatar image…</string>
    <string name="latest_score">Your latest score:</string>
    <string name="high_score">Your high score:</string>
    <string name="user_level">Your level:</string>
    <string name="start_game">Start Game</string>
    <string name="view_score_board">View Scoreboard</string>
    <string name="score">Score :</string>
    <string name="game_score">0</string>
    <string name="timer_minute" formatted="false">03</string>
    <string name="timer_colon">:</string>
    <string name="timer_second" formatted="false">00</string>
    <string name="game_congratulations">Congratulations you finished the game!</string>
    <string name="user_final_score_desc">Your Score:</string>
    <string name="user_final_score">0</string>
    <string name="game_over">GAME OVER!</string>
    <string name="bonus_points">Bonus points:</string>
    <string name="total_score">Total Score:</string>
    <string name="score_board">Hot Match Score Board</string>
    <string name="enter_a_nickname">Enter a nickname</string>
    <string name="sb_nickname">nick name</string>
    <string name="sb_high_score">high score</string>
    <string name="user_nickname">NickName</string>
</resources>
