<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/lower_box">

    <TextView
        android:id="@+id/game_result_desc"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/game_congratulations"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_final_score_desc"
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/game_result_desc"
        app:layout_constraintTop_toBottomOf="@+id/game_result_desc" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bonus_points"
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_score"
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/user_final_score_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_final_score"
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/user_bonus_points_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_final_score"
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/user_total_score_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_final_score"
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <Button
        android:id="@+id/eg_proceed_button"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/upper_box"
        android:text="@string/proceed"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/game_result_desc"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/game_result_desc"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


</androidx.constraintlayout.widget.ConstraintLayout>