<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pp_constraint_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/lower_box">

    <Button
        android:id="@+id/pp_btn_avatars"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/upper_box"
        android:text="@string/avatars"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/profile_image_description"
        app:layout_constraintStart_toStartOf="@+id/profile_image_description"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_description" />

    <TextView
        android:id="@+id/profile_image_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/pp_dialog_description"
        android:textAlignment="center"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pp_btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/upper_box"
        android:text="@string/camera"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/pp_btn_avatars"
        app:layout_constraintStart_toStartOf="@+id/pp_btn_avatars"
        app:layout_constraintTop_toBottomOf="@+id/pp_btn_avatars" />

    <Button
        android:id="@+id/pp_btn_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/upper_box"
        android:text="@string/gallery"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pp_btn_camera"
        app:layout_constraintStart_toStartOf="@+id/pp_btn_camera"
        app:layout_constraintTop_toBottomOf="@+id/pp_btn_camera" />
</androidx.constraintlayout.widget.ConstraintLayout>