<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/pf_upper_box"
        android:layout_width="0dp"
        android:layout_height="176dp"
        android:background="@drawable/upper_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/pf_lower_decoration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/lower_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pf_upper_box" />

    <View
        android:id="@+id/pf_separator_box"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/midline_box"
        app:layout_constraintBottom_toBottomOf="@+id/pf_upper_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pf_upper_box" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pf_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/profile_sample"
        app:civ_border_color="#fff"
        app:civ_border_width="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/pf_separator_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pf_separator_box" />

    <TextView
        android:id="@+id/pf_latest_score_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:text="@string/latest_score"
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/pf_profile_image" />

    <TextView
        android:id="@+id/pf_latest_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/pf_profile_image"
        tools:text="80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="233dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="163dp" />

    <TextView
        android:id="@+id/pf_high_score_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/high_score"
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/pf_latest_score_desc" />

    <TextView
        android:id="@+id/pf_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/pf_latest_score"
        tools:text="100" />

    <TextView
        android:id="@+id/pf_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/pf_high_score"
        tools:text="1" />

    <TextView
        android:id="@+id/pf_level_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_level"
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/pf_high_score_desc" />

    <Button
        android:id="@+id/pf_start_game_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/upper_box"
        android:text="@string/start_game"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pf_level_desc" />

    <Button
        android:id="@+id/pf_view_score_board"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/upper_box"
        android:text="@string/view_score_board"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pf_start_game_button"
        app:layout_constraintStart_toStartOf="@+id/pf_start_game_button"
        app:layout_constraintTop_toBottomOf="@+id/pf_start_game_button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>