<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/rg_upper_decoration"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@drawable/upper_box"
        android:maxHeight="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/rg_lower_decoration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/lower_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_upper_decoration" />

    <View
        android:id="@+id/rg_separator_box"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/midline_box"
        app:layout_constraintBottom_toBottomOf="@+id/rg_upper_decoration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_upper_decoration" />

    <ImageView
        android:id="@+id/rg_app_logo"
        android:layout_width="150dp"
        android:layout_height="162dp"
        android:contentDescription="@string/application_logo"
        app:layout_constraintBottom_toBottomOf="@+id/rg_upper_decoration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_upper_decoration"
        app:srcCompat="@drawable/applogo" />

    <ScrollView
        android:id="@+id/rg_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/rg_lower_decoration"
        app:layout_constraintEnd_toEndOf="@+id/rg_lower_decoration"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rg_lower_decoration"
        app:layout_constraintTop_toBottomOf="@+id/rg_upper_decoration"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rg_sv_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="399dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/rg_text_edit_password2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/re_enter_the_password"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#A2A9AB"
                app:backgroundTint="#fff"
                app:layout_constraintEnd_toEndOf="@+id/rg_text_edit_password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/rg_text_edit_password"
                app:layout_constraintTop_toBottomOf="@+id/rg_text_edit_password" />

            <EditText
                android:id="@+id/rg_text_edit_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/enter_a_password"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#A2A9AB"
                app:backgroundTint="#fff"
                app:layout_constraintEnd_toEndOf="@+id/rg_text_edit_email"
                app:layout_constraintStart_toStartOf="@+id/rg_text_edit_email"
                app:layout_constraintTop_toBottomOf="@+id/rg_text_edit_email" />

            <EditText
                android:id="@+id/rg_text_edit_email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/enter_an_e_mail_address"
                android:inputType="textEmailAddress"
                android:textColor="#fff"
                android:textColorHint="#A2A9AB"
                app:backgroundTint="#fff"
                app:layout_constraintEnd_toEndOf="@+id/rg_profile_image"
                app:layout_constraintStart_toStartOf="@+id/rg_profile_image"
                app:layout_constraintTop_toBottomOf="@+id/rg_profile_image" />

            <Button
                android:id="@+id/rg_register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/upper_box"
                android:text="@string/register"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/rg_text_edit_password2"
                app:layout_constraintStart_toStartOf="@+id/rg_text_edit_password2"
                app:layout_constraintTop_toBottomOf="@+id/rg_text_edit_password2" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/rg_profile_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:civ_border_width="2dp"
                app:civ_border_color="#fff"
                android:src="@drawable/profile_sample" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>